--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,6 @@
 <resources>
 
-    <style name="Theme.WeatherWise" parent="Theme.Material3.Light" />
+    <style name="Theme.WeatherWise" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:textColor">?attr/colorPrimary</item>
+    </style>
 </resources>
