--- a/app/src/main/res/drawable/ic_moon.xml
+++ b/app/src/main/res/drawable/ic_moon.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19.35,10.04C18.67,6.59 15.64,4 12,4 9.11,4 6.6,5.64 5.35,8.04 2.34,8.36 0,10.91 0,14c0,3.31 2.69,6 6,6h13c2.76,0 5,-2.24 5,-5 0,-2.64 -2.05,-4.78 -4.65,-4.96z" />
+        android:pathData="M14,2c1.82,0 3.53,0.5 5,1.35C16.01,5.08 14,8.3 14,12s2.01,6.92 5,8.65C17.53,21.5 15.82,22 14,22C8.48,22 4,17.52 4,12S8.48,2 14,2z" />
 </vector>
