--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
 <resources>
 
-    <style name="Theme.WeatherWise" parent="Theme.Material3.Dark" />
+    <style name="Theme.WeatherWise" parent="Theme.Material3.Dark.NoActionBar" />
 </resources>
