--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="Theme.WeatherWise" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Theme.WeatherWise" parent="Theme.Material3.Light">
         <item name="android:textColor">?attr/colorPrimary</item>
     </style>
 </resources>
